Add total functionality to all Services